<resources>
    <string name="app_name">Vzerve</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up_welcome_message">Need our service</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="sign_up">sign up</string>
    <string name="password">Password</string>
    <string name="password_hint">Password</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_already_member"><u>Already A Member. Sign In?</u></string>
    <string name="sign_in_new_user">![CDATA[<u>New here <font color="#3F51B5">Sign Up?</font></u>]]</string>
</resources>
