<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/margin_medium"
    tools:context="com.hexeleries.ambareeshb.vzerve.ui.fragments.SignInFragment">

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_small"
        android:text="aaa@mail.com"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="asd"
        android:layout_margin="@dimen/margin_small"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/textLinkSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/sign_in_new_user" />


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        style="@style/NextButton"
        android:text="@string/sign_in" />
</LinearLayout>
