<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.hexeleries.ambareeshb.vzerve.ui.fragments.SignUpFragment">

<include layout="@layout/toolbar" />

<android.support.v7.widget.AppCompatTextView
    android:id="@+id/labelWelcome"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/passwordText"
    android:layout_margin="@dimen/margin_small"
    android:gravity="center"
    style="@style/BoldTitleBlack"
    android:text="@string/password"

    />

<android.support.v7.widget.AppCompatEditText
    android:id="@+id/passwordText"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:layout_margin="@dimen/margin_large"
    android:gravity="center"
    android:hint="@string/password_hint"
    android:inputType="textPassword" />

<android.support.v7.widget.AppCompatButton
    android:id="@+id/buttonSubmitSignUp"
    style="@style/NextButton"
    android:text="@string/sign_up"
    android:layout_alignParentBottom="true" />


</RelativeLayout>
